[TASK] Upgrade package to work with Neos 2.0.0-beta2
Upgrade package to work with Neos 2.0.0-beta2

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -1,7 +1,7 @@
 # Override Page and add more properties
 'TYPO3.Neos.NodeTypes:Page':
   superTypes:
-    - 'TYPO3.Neos:Document'
+    'TYPO3.Neos:Document': TRUE
   ui:
     inspector:
       groups:
